# funnyprinter-bot

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
ai-service/: Cargo.toml
ai-service/src/: main.rs
deploy/: .env.example  README.md  bot-config.docker.example.toml  docker-compose.yml
deploy/docker/: Dockerfile.app
deploy/systemd/: printerd.env.example  printerd.service
funnyprint-cli/: Cargo.toml
funnyprint-cli/src/: main.rs
funnyprint-proto/: Cargo.toml
funnyprint-proto/src/: lib.rs
funnyprint-render/: Cargo.toml
funnyprint-render/src/: lib.rs
printerd/: Cargo.toml
printerd/src/: main.rs
telegram-bot/: Cargo.toml  bot-config.example.toml
telegram-bot/src/: main.rs
