[workspace]
members = [
  "funnyprint-proto",
  "funnyprint-render",
  "funnyprint-cli",
  "printerd",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = "1"
btleplug = "0.11"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
