[package]
name = "funnyprint-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
image.workspace = true
funnyprint-proto = { path = "../funnyprint-proto" }
funnyprint-render = { path = "../funnyprint-render" }
