[package]
name = "telegram-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
teloxide = { version = "0.13", features = ["macros", "rustls"] }
tokio-rusqlite = "0.6"
ab_glyph.workspace = true
serde_json = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
